compiler-core/src/parse/snapshots/gleam_core__parse__tests__unicode_cyrillic_a.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 2232
expression: "pub fn main() { а }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() { а }

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:17
  │
1 │ pub fn main() { а }
  │                 ^ Unexpected character

This looks like ascii latin letter a, but it is actually the unicode
Cyrillic letter а.
